--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>Jornada Viagens</title>
   </head>
   <body>
-    <h1>cavalos</h1>
+    <header>
+      <a href="index.html" title="Voltar para a página inicial">
+        <img
+          src="Img/bussola-jornada-branca.png"
+          alt="Bússola do logo Jornada Viagens"
+        />
+      </a>
+      <img src="Img/menu.png" alt="Menu" />
+      <nav>
+        <ul>
+          <li>
+            <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
+          </li>
+          <li>
+            <a
+              href="pacotes.html"
+              target="_blank"
+              title="Acessar Pacotes de Viagem"
+              >Pacote de Viagens</a
+            >
+          </li>
+          <li>
+            <a href="contato.html" target="_blank" title="Acessar Contato"
+              >Contato</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
