--- a/index.html
+++ b/index.html
@@ -14,27 +14,29 @@
           alt="Bússola do logo Jornada Viagens"
         />
       </a>
-      <img src="Img/menu.png" alt="Menu" />
-      <nav>
-        <ul>
-          <li>
-            <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
-          </li>
-          <li>
-            <a
-              href="pacotes.html"
-              target="_blank"
-              title="Acessar Pacotes de Viagem"
-              >Pacote de Viagens</a
-            >
-          </li>
-          <li>
-            <a href="contato.html" target="_blank" title="Acessar Contato"
-              >Contato</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <div class="navegation-menu">
+        <img src="Img/menu.png" alt="Menu" />
+        <nav>
+          <ul>
+            <li>
+              <a href="blog.html" target="_blank" title="Acessar Blog">Blog</a>
+            </li>
+            <li>
+              <a
+                href="pacotes.html"
+                target="_blank"
+                title="Acessar Pacotes de Viagem"
+                >Pacote de Viagens</a
+              >
+            </li>
+            <li>
+              <a href="contato.html" target="_blank" title="Acessar Contato"
+                >Contato</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
   </body>
 </html>
