adiciona responsividade desktop e hover para li's

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <header>
       <a class="logo" href="index.html" title="Voltar para a página inicial">
         <img
+          class="img-mobile"
           src="Img/bussola-jornada-branca.png"
           alt="Bússola do logo Jornada Viagens"
+        />
+        <img
+          class="img-desktop"
+          src="Img/bussola-jornada-texto-branco.png"
+          alt="Logo do logo Jornada Viagens na cor Branca"
         />
       </a>
       <div class="navegation-menu">
