adiciona meta ao index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Jornada Viagens - Os melhores preços e pacotes de viagem do Brasil"
+    />
+    <meta name="og:title" content="Jornada Viagens" />
+    <meta
+      name="og:image"
+      content="https://inuskull.github.io/jornada-viagens/Img/bussola-jornada-texto-branco.png"
+    />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="https://inuskull.github.io/jornada-viagens" />
     <link rel="stylesheet" href="./Css/style.css" />
     <title>Jornada Viagens</title>
   </head>
@@ -67,6 +78,42 @@
             <h3>
               Japão <br />
               <span> R$ 4000 </span>
+            </h3>
+          </header>
+          <footer>
+            <a class="button" href="#">Ver detalhes</a>
+          </footer>
+        </article>
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>
+              San Andreas <br />
+              <span> R$ 3000 </span>
+            </h3>
+          </header>
+          <footer>
+            <a class="button" href="#">Ver detalhes</a>
+          </footer>
+        </article>
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>
+              Paraíba <br />
+              <span> R$ 1200 </span>
+            </h3>
+          </header>
+          <footer>
+            <a class="button" href="#">Ver detalhes</a>
+          </footer>
+        </article>
+        <article class="card">
+          <header>
+            <p>HOTEL+AÉREO</p>
+            <h3>
+              Manaus <br />
+              <span> R$ 1600 </span>
             </h3>
           </header>
           <footer>
