--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       name="og:image"
       content="https://inuskull.github.io/jornada-viagens/Img/bussola-jornada-texto-branco.png"
     />
+    <meta name="description" content="">
     <meta name="og:type" content="website" />
     <meta name="og:url" content="https://inuskull.github.io/jornada-viagens" />
     <link rel="stylesheet" href="./Css/style.css" />
@@ -73,7 +74,7 @@
         <hr />
       </div>
       <div class="offers-cards">
-        <article class="card">
+        <article class="card japao">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
@@ -85,7 +86,7 @@
             <a class="button" href="#">Ver detalhes</a>
           </footer>
         </article>
-        <article class="card">
+        <article class="card sanandreas">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
@@ -97,7 +98,7 @@
             <a class="button" href="#">Ver detalhes</a>
           </footer>
         </article>
-        <article class="card">
+        <article class="card paraiba">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
@@ -109,7 +110,7 @@
             <a class="button" href="#">Ver detalhes</a>
           </footer>
         </article>
-        <article class="card">
+        <article class="card manaus">
           <header>
             <p>HOTEL+AÉREO</p>
             <h3>
