adiciona Favicon ao site

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
       name="og:image"
       content="https://inuskull.github.io/jornada-viagens/Img/bussola-jornada-texto-branco.png"
     />
-    <meta name="description" content="">
+    <meta name="description" content="" />
     <meta name="og:type" content="website" />
     <meta name="og:url" content="https://inuskull.github.io/jornada-viagens" />
     <link rel="stylesheet" href="./Css/style.css" />
+    <link rel="icon" href="favicon.png" />
     <title>Jornada Viagens</title>
   </head>
   <body>
