--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       name="og:image"
       content="https://inuskull.github.io/jornada-viagens/Img/bussola-jornada-texto-branco.png"
     />
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Os melhores preços e pacotes de viagem do Brasil"
+    />
     <meta name="og:type" content="website" />
     <meta name="og:url" content="https://inuskull.github.io/jornada-viagens" />
     <link rel="stylesheet" href="./Css/style.css" />
