--- a/index.html
+++ b/index.html
@@ -128,5 +128,67 @@
         </article>
       </div>
     </section>
+    <section class="categories">
+      <div class="section-title">
+        <h2>Busque por Categoria</h2>
+        <hr />
+      </div>
+      <div class="categories-cards">
+        <a
+          class="card"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Pacotes Nacionais"
+        >
+          <img
+            src="Img/ícone - pacotes nacionais.png"
+            alt="Ícone cinza representando uma pessoa fazendo tracking."
+          />
+          <h3>
+            Pacotes<br />
+            Nacionais
+          </h3>
+        </a>
+
+        <a
+          class="card"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Pacotes interacionais"
+        >
+          <img
+            src="Img/ícone - pacotes interacionais.png"
+            alt="Ícone cinza de um avião."
+          />
+          <h3>Pacotes Interacionais</h3>
+        </a>
+
+        <a
+          class="card"
+          href="#"
+          target="_blank"
+          title="Busque pela categoria Transfer"
+        >
+          <img src="Img/ícone -transfer.png" alt="Ícone de uma vãn zinza." />
+          <h3>Transfer</h3>
+        </a>
+
+        <a
+          class="card"
+          href="#"
+          target="_blank"
+          title="Busque pela Seguro Viagem"
+        >
+          <img
+            src="Img/ícone - seguro viagem.png"
+            alt="Ícone do planeta terra cinza com um cadeado ao seu lado."
+          />
+          <h3>
+            Seguro<br />
+            Viagem
+          </h3>
+        </a>
+      </div>
+    </section>
   </body>
 </html>
