cria estrutura dos itens

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <div class="destinations-items">
         <article class="item">
           <header>
-            <div class="img-item"></div>
+            <div class="img-item-tokyo"></div>
             <h4>Tokyo</h4>
           </header>
 
@@ -211,9 +211,10 @@
             <a class="button"> Ver Detalhes </a>
           </footer>
         </article>
+
         <article class="item">
           <header>
-            <div class="img-item"></div>
+            <div class="img-item-osaka"></div>
             <h4>Osaka</h4>
           </header>
           <p>
