finaliza estilização do destinos

--- a/index.html
+++ b/index.html
@@ -208,7 +208,14 @@
             perca a chance de mergulhar em sua atmosfera fascinante.
           </p>
           <footer>
-            <a class="button"> Ver Detalhes </a>
+            <a
+              class="button"
+              href="#"
+              target="_blank"
+              title="Veja mais detalhes do destino Tokyo"
+            >
+              Ver Detalhes
+            </a>
           </footer>
         </article>
 
@@ -223,7 +230,14 @@
             partida para explorar outras cidades japonesas próximas.
           </p>
           <footer>
-            <a class="button"> Ver Detalhes </a>
+            <a
+              class="button"
+              href="#"
+              target="_blank"
+              title="Veja mais detalhes do destino Osaka"
+            >
+              Ver Detalhes
+            </a>
           </footer>
         </article>
       </div>
