--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Jornada Viagens</title>
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <a class="logo" href="index.html" title="Voltar para a página inicial">
         <img
           class="img-mobile"
