--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </section>
     <section class="categories">
       <div class="section-title">
-        <h2>Busque por Categoria</h2>
+        <h2 class="content-title">Busque por Categoria</h2>
         <hr />
       </div>
       <div class="categories-cards">
@@ -144,7 +144,7 @@
             src="Img/ícone - pacotes nacionais.png"
             alt="Ícone cinza representando uma pessoa fazendo tracking."
           />
-          <h3>
+          <h3 class="content-title">
             Pacotes<br />
             Nacionais
           </h3>
@@ -160,7 +160,7 @@
             src="Img/ícone - pacotes interacionais.png"
             alt="Ícone cinza de um avião."
           />
-          <h3>Pacotes Interacionais</h3>
+          <h3 class="content-title">Pacotes Interacionais</h3>
         </a>
 
         <a
@@ -170,7 +170,7 @@
           title="Busque pela categoria Transfer"
         >
           <img src="Img/ícone -transfer.png" alt="Ícone de uma vãn zinza." />
-          <h3>Transfer</h3>
+          <h3 class="content-title">Transfer</h3>
         </a>
 
         <a
@@ -183,7 +183,7 @@
             src="Img/ícone - seguro viagem.png"
             alt="Ícone do planeta terra cinza com um cadeado ao seu lado."
           />
-          <h3>
+          <h3 class="content-title">
             Seguro<br />
             Viagem
           </h3>
@@ -192,17 +192,17 @@
     </section>
     <section class="destinations">
       <div class="section-title">
-        <h2>Destinos Populares</h2>
+        <h2 class="content-title">Destinos Populares</h2>
         <hr />
       </div>
       <div class="destinations-items">
         <article class="item">
           <header>
             <div class="img-item-tokyo"></div>
-            <h4>Tokyo</h4>
+            <h4 class="content-title">Tokyo</h4>
           </header>
 
-          <p>
+          <p class="content-text">
             Tóquio é uma cidade vibrante e cosmopolita, com seus templos
             históricos, museus de arte moderna e arranha-céus icônicos. Não
             perca a chance de mergulhar em sua atmosfera fascinante.
@@ -224,7 +224,7 @@
             <div class="img-item-osaka"></div>
             <h4>Osaka</h4>
           </header>
-          <p>
+          <p class="content-text">
             Osaka é uma cidade agitada e moderna no Japãos. A cidade é famosa
             por sua gastronomia deliciosa e por ser um excelente ponto de
             partida para explorar outras cidades japonesas próximas.
@@ -244,17 +244,22 @@
     </section>
     <section class="payments">
       <div class="section-title">
-        <h2>Condições de Pagamento</h2>
+        <h2 class="content-title">Condições de Pagamento</h2>
         <hr />
       </div>
-      <div class="text-content">
-        <h3></h3>
-        <p></p>
-      </div>
-      <div class="image-content">
-       <div class="image bag"></div>
-       <div class="image passport"></div>
-       <div class="image people"></div>
+      <div class="content-container">
+        <div class="text-content">
+          <h3 class="content-title">Parcelamento em até 12x!</h3>
+          <p class="content-text">
+            Viaje pagando em até 12 parcelas no cartão, à vista no crédito com
+            5% de desconto ou no Pix com 10% de desconto!
+          </p>
+        </div>
+        <div class="image-gallery">
+          <div class="image-bag"></div>
+          <div class="image-passport"></div>
+          <div class="image-people"></div>
+        </div>
       </div>
     </section>
   </body>
